Add and update unit tests for utility classes in org.codelibs.fess.util